<resources>
    <string name="app_name">WhatPulse Helper</string>

    <!--Profile info-->
    <string name="profile_section_account">Account</string>
    <string name="profile_section_total">Total</string>
    <string name="profile_section_ranks">Ranks</string>
    <string name="profile_section_average">Average</string>

    <!--Login-->
    <string name="login_welcome">Welcome</string>
    <string name="login_username_hint">WhatPulse username</string>

    <!--Bottom navigation-->
    <string name="bottom_nav_profile">Profile</string>
    <string name="bottom_nav_computers">Computers</string>
    <string name="bottom_nav_teams">Teams</string>

    <!--Errors-->
    <string name="no.pulses.from.pc">No pulses was performed from this PC</string>

    <!--Menu-->
    <string name="menu_refresh">Refresh</string>
    <string name="menu_logout">Logout</string>

    <string name="info">Info</string>
    <string name="dismiss">Dismiss</string>
    <string name="info_default_cache">Due to WhatPulse limitations actual data can be loaded only once an hour. Last was on %1$s at %2$s</string>

    <!--Placeholders-->
    <string name="placeholder_text">Value</string>
    <string name="keys">Keys</string>
    <string name="clicks">Clicks</string>
    <string name="uptime">Uptime</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="keys.per.pulse">Keys per pulse</string>
    <string name="keys.per.second">Keys per second</string>
    <string name="clicks.per.pulse">Clicks per pulse</string>
    <string name="click.per.pulse">Clicks per second</string>
    <string name="country">Country</string>
    <string name="username">Username</string>
    <string name="joined.at">Joined at</string>
    <string name="last.pulse.at">Last pulse at</string>
    <string name="pulses">Pulses</string>
    <string name="amount.of.pulses">Amount of pulses</string>
</resources>
