<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.vchornenkyy.whatpulsehelper.GeneralInfoFragment">

    <data>

        <variable
            name="user"
            type="com.vchornenkyy.whatpulsehelper.common.dto.User" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/accountLayout"
            style="@style/Block"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAccountTitle"
                style="@style/Title"
                android:text="@string/profile_section_account" />

            <com.vchornenkyy.whatpulsehelper.common.view.LabeledTextView
                android:id="@+id/tvUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/username"
                app:valueText="@{user.accountName}" />

            <com.vchornenkyy.whatpulsehelper.common.view.LabeledTextView
                android:id="@+id/tvCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/country"
                app:valueText="@{user.country}" />

            <com.vchornenkyy.whatpulsehelper.common.view.LabeledTextView
                android:id="@+id/tvJoinedAt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/joined.at"
                app:valueText="@{user.dateJoined}" />

            <com.vchornenkyy.whatpulsehelper.common.view.LabeledTextView
                android:id="@+id/tvLastPulse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/last.pulse.at"
                app:valueText="@{user.lastPulse}" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/totalLayout"
            style="@style/Block"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTotalTitle"
                style="@style/Title"
                android:text="@string/profile_section_total" />

            <com.vchornenkyy.whatpulsehelper.common.view.LabeledTextView
                android:id="@+id/tvPulse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/pulses"
                app:valueText="@{user.pulsesAmount}" />

            <com.vchornenkyy.whatpulsehelper.common.view.LabeledTextView
                android:id="@+id/tvKeysAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/keys"
                app:valueText="@{user.keysPressed}" />

            <com.vchornenkyy.whatpulsehelper.common.view.LabeledTextView
                android:id="@+id/tvClicksAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/clicks"
                app:valueText="@{user.clicksMade}" />

            <com.vchornenkyy.whatpulsehelper.common.view.LabeledTextView
                android:id="@+id/tvUptimeAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/uptime"
                app:valueText="@{user.uptime}" />

            <com.vchornenkyy.whatpulsehelper.common.view.LabeledTextView
                android:id="@+id/tvDownload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/download"
                app:valueText="@{user.download}" />

            <com.vchornenkyy.whatpulsehelper.common.view.LabeledTextView
                android:id="@+id/tvUpload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/upload"
                app:valueText="@{user.upload}" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ranksLayout"
            style="@style/Block"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvRanksTitle"
                style="@style/Title"
                android:text="@string/profile_section_ranks" />

            <com.vchornenkyy.whatpulsehelper.common.view.LabeledTextView
                android:id="@+id/tvKeysRank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/keys"
                app:valueText="@{user.ranks.keys}" />

            <com.vchornenkyy.whatpulsehelper.common.view.LabeledTextView
                android:id="@+id/tvClicksRank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/clicks"
                app:valueText="@{user.ranks.clicks}" />

            <com.vchornenkyy.whatpulsehelper.common.view.LabeledTextView
                android:id="@+id/tvUptimeRank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/uptime"
                app:valueText="@{user.ranks.uptime}" />

            <com.vchornenkyy.whatpulsehelper.common.view.LabeledTextView
                android:id="@+id/tvDownloadRank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/download"
                app:valueText="@{user.ranks.download}" />

            <com.vchornenkyy.whatpulsehelper.common.view.LabeledTextView
                android:id="@+id/tvUploadRank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/upload"
                app:valueText="@{user.ranks.upload}" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/averageLayout"
            style="@style/Block"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAverageTitle"
                style="@style/Title"
                android:text="@string/profile_section_average" />

            <com.vchornenkyy.whatpulsehelper.common.view.LabeledTextView
                android:id="@+id/tvKeysAvgPulse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/keys.per.pulse"
                app:valueText="@{user.averageKeysPerPulse}" />

            <com.vchornenkyy.whatpulsehelper.common.view.LabeledTextView
                android:id="@+id/tvKeysAvgSec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/keys.per.second"
                app:valueText="@{user.averageKeysPerSecond}" />

            <com.vchornenkyy.whatpulsehelper.common.view.LabeledTextView
                android:id="@+id/tvClicksAvgPulse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/clicks.per.pulse"
                app:valueText="@{user.averageClicksPerPulse}" />

            <com.vchornenkyy.whatpulsehelper.common.view.LabeledTextView
                android:id="@+id/tvClicksAvgSec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/click.per.pulse"
                app:valueText="@{user.averageClicksPerSecond}" />
        </LinearLayout>
    </LinearLayout>
</layout>