<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.vchornenkyy.whatpulsehelper.GeneralInfoFragment">

    <data>

        <variable
            name="team"
            type="com.vchornenkyy.whatpulsehelper.domain.dto.Team" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/accountLayout"
            style="@style/Block"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAccountTitle"
                style="@style/Title"
                android:text="Team" />

            <com.vchornenkyy.whatpulsehelper.view.widgets.LabeledTextView
                android:id="@+id/tvUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="Name"
                app:valueText="@{team.name}" />

            <com.vchornenkyy.whatpulsehelper.view.widgets.LabeledTextView
                android:id="@+id/tvJoinedAt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="Date formed"
                app:valueText="@{team.dateFormed}" />

            <com.vchornenkyy.whatpulsehelper.view.widgets.LabeledTextView
                android:id="@+id/tvLastPulse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="Founder"
                app:valueText="@{team.founder}" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/descriptionLayout"
            style="@style/Block"
            android:orientation="vertical">

            <TextView
                style="@style/Title"
                android:text="Description" />

            <TextView
                android:id="@+id/value"
                style="@style/Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{team.description}"
                tools:text="Description placeholder" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/totalLayout"
            style="@style/Block"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTotalTitle"
                style="@style/Title"
                android:text="@string/profile_section_total" />

            <com.vchornenkyy.whatpulsehelper.view.widgets.LabeledTextView
                android:id="@+id/tvPulse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="Users"
                app:valueText="@{team.members}" />

            <com.vchornenkyy.whatpulsehelper.view.widgets.LabeledTextView
                android:id="@+id/tvKeysAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/keys"
                app:valueText="@{team.keysPressed}" />

            <com.vchornenkyy.whatpulsehelper.view.widgets.LabeledTextView
                android:id="@+id/tvClicksAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/clicks"
                app:valueText="@{team.clicksMade}" />

            <com.vchornenkyy.whatpulsehelper.view.widgets.LabeledTextView
                android:id="@+id/tvUptimeAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/uptime"
                app:valueText="@{team.uptime}" />

            <com.vchornenkyy.whatpulsehelper.view.widgets.LabeledTextView
                android:id="@+id/tvDownload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/download"
                app:valueText="@{team.download}" />

            <com.vchornenkyy.whatpulsehelper.view.widgets.LabeledTextView
                android:id="@+id/tvUpload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/upload"
                app:valueText="@{team.upload}" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ranksLayout"
            style="@style/Block"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvRanksTitle"
                style="@style/Title"
                android:text="@string/profile_section_ranks" />

            <com.vchornenkyy.whatpulsehelper.view.widgets.LabeledTextView
                android:id="@+id/tvKeysRank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/keys"
                app:valueText="@{team.ranks.keys}" />

            <com.vchornenkyy.whatpulsehelper.view.widgets.LabeledTextView
                android:id="@+id/tvClicksRank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/clicks"
                app:valueText="@{team.ranks.clicks}" />

            <com.vchornenkyy.whatpulsehelper.view.widgets.LabeledTextView
                android:id="@+id/tvUptimeRank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/uptime"
                app:valueText="@{team.ranks.uptime}" />

            <com.vchornenkyy.whatpulsehelper.view.widgets.LabeledTextView
                android:id="@+id/tvDownloadRank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/download"
                app:valueText="@{team.ranks.download}" />

            <com.vchornenkyy.whatpulsehelper.view.widgets.LabeledTextView
                android:id="@+id/tvUploadRank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/upload"
                app:valueText="@{team.ranks.upload}" />
        </LinearLayout>

    </LinearLayout>
</layout>
